fix: back button visibility

--- a/src/style.css
+++ b/src/style.css
@@ -40,10 +40,6 @@ body {
   display: 1;
 }
 
-.main-page .hidden {
-  display: none;
-}
-
 .button:hover {
   opacity: 0.5;
   cursor: pointer;
